# time-series-analysis

./: .gitignore  README.md  TimeSeries.xlsx  acf_pacf_test.ipynb  arima-test.ipynb  arima_new.ipynb  concepts.ipynb  data_reduction.ipynb  date_format_test.ipynb  dateconverter.py  models.ipynb  properties.md  pyproject.toml  requirements.txt  test.ipynb  test.py  test_arima.ipynb  timeseries_properties.ipynb  visualizations.ipynb  visualizations_echarts.ipynb
datasets/4/: Rainfall_data.csv
datasets/5/: .~lock.Wind Time Series Dataset(hourly).csv#  AMZN_ts.csv  data_ts.txt
date_conversion/: dateconverter.py
notebooks_other/: concepts.ipynb
plots/: acf-final.html  area-stack.html  arima-prediction.html  arima-predictions.html  autocorrelation.html  autocovarianc.html  bar-waterfall2.html  detrend.html  double-line-simple.html  gantt.html  lagplot-simple.html  line-simple.html  output (1).txt  output.txt  pacf-final.html  seasonal.html  stackedarea.html  stationary_transform.html  streamgraph.html  waterfall1.html  waterfall2.html
plots/echarts/: acf-final.html  area-stack.html  arima-predictions.html  bar-waterfall2.html  cross_correlation.html  deseasonalized.html  detrend.html  differencing.html  lagplot-simple.html  output.txt  trend.html  (+4 more)
tests/: 1.ipynb  3.ipynb  4.ipynb  5.ipynb  6.ipynb  7.ipynb  date_format_test.ipynb  models.ipynb  output.txt  test1.ipynb  test2.ipynb  test3.ipynb  test4_interpolation.ipynb  test_categorical_impute.ipynb  test_impute.ipynb
tsa/: dateconverter.py  interpolation.py  models.py  properties.py  test_tsa.py  visualization.py
(+16 files in other folders)
